imprimir las peliculas

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             <video class="w-100" src="./assets/video/pelisbanner.mp4" muted autoplay loop></video>
         </section>
         <section>
+            <div class="container mt-5">
+                <div id="fila" class="row row-cols-1 row-cols-md-3">
+                </div>
+            </section>
+            </div>
+        <section>
             <div class="container">
                 <div class="row mt-5">
                     <div class="col-4 text-center align-self-center">
@@ -63,18 +69,7 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-6">
-                        <h1 id="titulo">Hola</h1>
-                        <img id="imagen" src="./assets/img/pelis.png" alt="">
-                        <hr>
-                        <button id="cambio" type="button">Cambio</button>
-                    </div>
-                </div>
-            </div>
-        </section>
+
         <!--Section OffCanvas-->
         <section>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
@@ -107,5 +102,6 @@
     <script src="./src/controllers/bd.js"></script>
     <script src="./src/controllers/controladorIndex.js"></script>
     <script src=".//src/controllers/funciones.js"></script>
+    <script src="./src/controllers/controladorllenado.js"></script>
 </body>
 </html>
