--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
         </section>
         <section>
             <div class="container mt-5">
-                <div id="fila" class="row row-cols-1 row-cols-md-3">
+                <div class="row">
+                    <div class="col-12">
+                        <input type="search" class="form-control my-2" placeholder="Buscar pelicula" id="buscar">
+                    </div>
                 </div>
-            </section>
+                <div id="fila" class="row row-cols-1 row-cols-md-3"></div>
             </div>
+        </section>
         <section>
             <div class="container">
                 <div class="row mt-5">
@@ -96,12 +100,10 @@
         </section>
     </main>
     <footer>
-
+        Todos los derechos reservados 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="./src/controllers/bd.js"></script>
-    <script src="./src/controllers/controladorIndex.js"></script>
-    <script src=".//src/controllers/funciones.js"></script>
-    <script src="./src/controllers/controladorllenado.js"></script>
+    <script src="./src/controllers/controladorllenado.js" type="module"></script>
+    <script src="./src/controllers/controladorHome.js" type="module"></script>
 </body>
 </html>
