--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="./src/views/info.html">Tienda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -51,7 +51,9 @@
                         <input type="search" class="form-control my-2" placeholder="Buscar pelicula" id="buscar">
                     </div>
                 </div>
-                <div id="fila" class="row row-cols-1 row-cols-md-3"></div>
+                <div id="fila" class="row row-cols-1 row-cols-md-3">
+
+                </div>
             </div>
         </section>
         <section>
@@ -63,13 +65,11 @@
                             <i class="bi bi-box-arrow-in-right"></i>
                             Registrate
                         </button>
-
                     </div>
                     <div class="col-8">
                         <h4 class="text-center">Tienda Peliculas</h4>
                         <img class="img-fluid w-100" src="./assets/img/pelis.png" alt="">
                     </div>
-                    
                 </div>
             </div>
         </section>
@@ -109,5 +109,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="./src/controllers/controladorllenado.js" type="module"></script>
     <script src="./src/controllers/controladorHome.js" type="module"></script>
+    <script src="./src/controllers/controladorBuscar.js" type="module"></script>
 </body>
 </html>
