--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <header class="animate__animated animate__backInLeft">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="../../index.html">
+                    <img src="../../assets/img/netflix.png" class="logo" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,7 +46,7 @@
         <section>
             <video class="w-100" src="./assets/video/pelisbanner.mp4" muted autoplay loop></video>
         </section>
-        <section>
+        <!-- <section>
             <div class="container mt-5">
                 <div class="row">
                     <div class="col-12">
@@ -55,7 +57,7 @@
 
                 </div>
             </div>
-        </section>
+        </section> -->
         <section>
             <div class="container">
                 <div class="row mt-5">
