--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./src/views/info.html">Tienda</a>
+                        <a class="nav-link" href="./src/views/peliculas.html">Peliculas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -109,8 +109,6 @@
         <a href="https://github.com/sebasVV515/Tienda">GitHub</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="./src/controllers/controladorllenado.js" type="module"></script>
     <script src="./src/controllers/controladorHome.js" type="module"></script>
-    <script src="./src/controllers/controladorBuscar.js" type="module"></script>
 </body>
 </html>
