Cambiar moneda y registro

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <h4>Registrate</h4>
                         <button class="btn btn-dark mt-5" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
                             <i class="bi bi-box-arrow-in-right"></i>
-                            Registrate
+                            Ingresa
                         </button>
                     </div>
                     <div class="col-8">
@@ -90,7 +90,7 @@
         <section>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title fuente" id="offcanvasExampleLabel">Registrate</h5>
+                    <h5 class="offcanvas-title fuente" id="offcanvasExampleLabel">Ingresa</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
                 </div>
                 <div class="offcanvas-body">
@@ -108,7 +108,10 @@
                           <input type="checkbox" class="form-check-input" id="exampleCheck1">
                           <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div> -->
-                        <button type="submit" class="btn btn-primary fuente">Registrar</button>
+                        <button type="submit" class="btn btn-primary fuente">Ingresar</button>
+                        <br>
+                        <br>
+                        <a href="./src/views/registro.html">¿No tienes cuenta?</a>
                       </form>
                 </div>
               </div>
