--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="container">
                 <div class="row mt-5">
                     <div class="col-4 text-center align-self-center">
-                        <h4>Registrate</h4>
+                        <h4>Login</h4>
                         <button class="btn btn-dark mt-5" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
                             <i class="bi bi-box-arrow-in-right"></i>
                             Ingresa
