arreglo de bugs carrito

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                                 <span id="cantCarrito" class="position-absolute top-45 start-350 translate-middle badge rounded-pill bg-danger">
                                     0
                                 </span>
+                                <button onclick=""></button>
                             </a>
                         </li>
                     </ul>
